--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
           <li>Торговый представитель</li>
           <li>Администратор реп-базы</li>
-          <li>Ювелир <i>(прошу обойтись без шуток про "Сашку-ювелира)</i></li>
+          <li>Ювелир <i>(прошу обойтись без шуток про "Сашку-ювелира")</i></li>
           <li>Кладовщик</li>
         </ul>
       </p>
